--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "self-shim",
   "version": "1.0.0",
   "description": "a shim for the DOM self object",
-  "keywords": ["self-shim", "shim", "dom", "self"],
+  "keywords": [
+    "self-shim",
+    "shim",
+    "dom",
+    "self"
+  ],
   "author": "Websecurify <contact@websecurify.com> (http://www.websecurify.com)",
   "homepage": "https://github.com/websecurify/node-self-shim",
   "repository": {
@@ -14,8 +19,10 @@
     "url": "http://github.com/websecurify/node-self-shim/issues/"
   },
   "main": "./index.js",
-    "licenses": [{
-      "type" : "MIT",
-      "url" : "https://github.com/websecurify/node-self-shim/LICENSE.md"
-    }]
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/websecurify/node-self-shim/LICENSE.md"
+    }
+  ]
 }
